workloads/traefik/manifests/additions/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: traefik-v2
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
spec:
  redirectScheme:
    scheme: https
    permanent: true
