workloads/traefik/manifests/additions/ingressroute.yaml
---
# yamllint disable rule:line-length
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
  namespace: traefik-v2
  annotations:
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik-v2
    helm.sh/chart: traefik-26.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.fh.dronen.house`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 9000
          scheme: http
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: traefik-v2
  annotations:
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik-v2
    helm.sh/chart: traefik-26.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.fh.dronen.house`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 9000
          scheme: http
      middlewares:
        - name: https-redirect
  tls:
    secretName: traefik-cert
